Revision history for Mojolicious-Plugin-LinkEmbedder

0.01
       * Init project